# MeAndTheBoysBot

./: .editorconfig  .gitignore  Cargo.toml  Dockerfile  Dockerfile_debug  Readme.md  flake.nix  update.sh
.github/workflows/: docker_build.yaml  docker_build_dev.yaml
.sqlx/: query-0675660f50169e8846c88a83f18fcbbfe0345069c20b4027aa2ba5d247929f0a.json  query-0d8dbabd149d53a0457c54b5836c4c1c2af88c182f1954e6673bf6ee668d2467.json  query-1c23d641eb958b239d65daa272f164bc3f065890987aa65b70e565b20ead78f1.json  query-1d5697c731d1984c53f3dbdba931db12f57ce1789b67087891ab6972ac772899.json  query-205cbeb2bd7975fc10125694e1d33d34c5d449e1569d61415745b42a7a1e3ef0.json  query-23030d0d07f2b04b48b07a33dd26f6dfb06cb3ebd051e7fd150d84a46d582215.json  query-2db48d2d5af476d06307ea6ae8bc2b005afe107b97ef5d86df051a1eb81a3761.json  query-31d212d97b794eb266796aa30b1915485c749ebe6a69c68a6047eecf7d597a14.json  query-35805bd565c4f8385fd663f69dcee156aa8208e7cdf3e3c8568ee044f4096f5b.json  query-3bd88716d125f1bcc0ad2b03cc18937f3199e245c494a7731679a9ee429229cf.json  query-3f5076d36f7e553eabea5f5f92fbb05c6ccee26b7527505ce6eda02b64710943.json  query-42667cd0089097c0f6f484036469e58d49140dfef482e761a9a95d77356bc8d4.json  query-45525e7ae8f2432c0780a1b8ae029d3d415d5ed1c8c0b835a280dc0fa694fd86.json  query-540533a0e7692b719c54e62ecdf2b609d433bcdcb0449af68adc4217d1b5442c.json  query-564eb6daa53aae353a09f12dac0d8d0a249f1c24cf518a536c0fff7425953f83.json  query-5b11a6d5900eb5f9d867d52401ae1b21aa5ea21d536a28ec861a0b9b68ba220f.json  query-5d41ee7e2a4c8a4e99b7bb3b4d3e9a85244303c39a40c055dddd349a5aa099dd.json  query-636eccd7a1c0fda0c794ccfbca9b151f38fa08bfdb3af647664368dc750457b9.json  query-67f0a525b31cdb718ca00abf54a60f3018d961864297ee1b6f0c25c2052a7036.json  query-80484be760cccce71868c4143fad6730620adb7d116650caf7562cc2ad3741ab.json  query-8524c2af5f73827a53c09a1ffc8633f0cb27e7fc62e76826dadde465be868e83.json  query-855b0eb0c9a417d17e3d6227c5c9ce0b63465d51f9071034460576b68bcb43dc.json  query-8a02b98e0bfdd203ea372283ee6c41aba221d6b4db59a0ad4d95751467ec4168.json  query-8a05f823a8024ddb00977958daf312752363c58de0e2603fed6272d7905705f9.json  query-8f3717b3b3eefb27793a4c282d3319361715b4fd6ba08331d038a742a59485e9.json  query-91090fca34aa4d1f3f2cbb63cb1b98e8dba0f5f60dd984d149c26123f1ff02d8.json  query-938b51900e4a9cce8cc12c83dd91910abb7084ea743febfa4b8f4b5e88e2e09f.json  query-93fc7a438fa942c061cd2e480c22242eff21c8695f7a9878b17c80ba856c27c2.json  query-993481d9db70410804e70bc435f0831efecedddc1d5d2a0b50b15278e62facbc.json  query-9afcdda4be7d2c08c0756b9f0a8ae1bb8bf7eb2746ff6d05e276e0dbc0d77b0d.json  query-9e957aabe064ee7ad06894ef5821815130f96ee928eb73275d6509577b4e3324.json  query-a0523738bf20380445fe9fb15d21b66cc8dc081cc5dc7b6ef505d295309d5dfc.json  query-a71179df08f5b1e1387c2cc50a28279de9f5888cf01381ae9ce75a85831bde86.json  query-ad1653d30b19be1dd8bfb12226bdd3638c6cf749a367a8aadcf0338e5a0498db.json  query-b205b2f6ae40750cd6f6cc9bab30d194e340ee7da07af67dbf98c21d35719bbb.json  query-b8fd97191dae0be5dfc32dcd1e450e27db08ebb0866d727aefb7b2102969348d.json  query-c78d427bb2cf1b3709584832aec75dce74c75975fa5fb87b1089548c7c96bf2f.json  query-c87931a520f6a4c49fc57576c4ad5ba4507af0092b8aa2ac36f6982b49a859b4.json  query-cabb5174bbce97e88b3de589a80bd43ee9132d4310208fa927c28eacf24fb0ee.json  query-cbaa03a5875a1dbde1b9d149d61329e8df36b243518008ccfaf0c1ab85b181fd.json  (+12 more)
migrations/: 20250622115537_default.sql  20250622120212_create_role_reaction.sql
src/: client.rs  discord_client.rs  main.rs  rocket.rs  twitch_client.rs
src/client/: commands.rs  role_limiter.rs  role_reaction.rs  temp_channels.rs  xp.rs
src/client/commands/: debug.rs  settings.rs
src/rocket/: auth.rs  base64.rs  csrf.rs  index.rs  oauth.rs  twitch.rs  webhook.rs
src/rocket/auth/: discord.rs  twitch.rs
src/rocket/discord/: oauth.rs
src/rocket/twitch/: oauth.rs  webhook.rs
src/twitch_client/: rocket_callback.rs
(+12 files in other folders)
