[package]
name = "me-and-the-boys-dcbot"
version = "0.1.0"
authors = ["C0D3 M4513R <28912031+C0D3-M4513R@users.noreply.github.com>"]
edition = "2021"
#include = ["src/**"]
#include = ["test/**"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#.env support
dotenv = "0.15"
#logging
tracing = {version = "0.1", features = ["attributes"]}
tracing-attributes = "0.1"
tracing-subscriber = "0.3"

#eaze-tracing-honeycomb = "0.2.1-eaze.7"
#libhoney-rust = "0.1.6"

serde = { version = "1", features = ["rc"] }
serde_derive = "1"
serde_json = "1"
dashmap = { version = "6.1.0" , features = ["serde"]}
#bot
serenity = { version = "^0.12", features = ["cache", "framework", "standard_framework", "rustls_backend"] }
poise = "0.6.1"
#async main
tokio = { version = "^1.4", features = ["macros", "signal", "rt-multi-thread"] }


[[bin]]
name="dummy"
path="dummy.rs"

[profile.release]
lto = true
strip = true
